docs/7.56/md/abenuser_interfaces_gdl.md
---
title: "User Interfaces"
description: |
  The user interface is the interface between a (human) user and a machine, in this case between the user and the ABAP program that is running. In the ABAP environment, graphical user interfaces (GUIs) are used which can be operated using a keyboard, mouse, or other input devices. They are based on as
version: "7.56"
category: "oop"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenuser_interfaces_gdl.htm"
abapFile: "abenuser_interfaces_gdl.htm"
keywords: ["select", "do", "case", "class", "abenuser", "interfaces", "gdl"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Programming Guidelines](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_pgl.htm) →  [Architecture](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenarchitecture_gdl.htm) → 

User Interfaces

The user interface is the interface between a (human) user and a machine, in this case between the user and the ABAP program that is running. In the ABAP environment, graphical user interfaces (GUIs) are used which can be operated using a keyboard, mouse, or other input devices. They are based on assorted interface technologies and use either SAP's own SAP GUI or are Web-based technologies that create HTML pages displayed using Web browsers.

-   [Selecting the User Interface Technology](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abeninterface_tech_guidl.htm "Guideline")
-   [Encapsulating Classic User Interfaces](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenencap_class_interf_guidl.htm "Guideline")
-   [Lists](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenlist_guidl.htm "Guideline")
-   [Accessibility](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenaccessibility_guidl.htm "Guideline")

Continue
[Selecting the User Interface Technology](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abeninterface_tech_guidl.htm)
[Encapsulating Classic User Interfaces](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenencap_class_interf_guidl.htm)
[Lists](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenlist_guidl.htm)
[Accessibility](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenaccessibility_guidl.htm)